Fixed a bug with overflow in reporting widget

--- a/src/resources/assets/sass/_dashboard.scss
+++ b/src/resources/assets/sass/_dashboard.scss
@@ -24,6 +24,7 @@
     padding-top: 2rem;
     padding-left: 2rem;
     padding-right: 2rem;
+    overflow: hidden;
 
     background: #e6f0f3;
 
